# adventofcode

./: .gitignore
2024/: flake.nix
2024/day01/: day01.cabal  default.nix
2024/day01/app/: Main.hs
2024/day02/: day02.cabal  default.nix
2024/day02/app/: Main.hs
2024/day03/: day03.cabal  default.nix
2024/day03/app/: Main.hs
2024/day03/lib/: Lib.hs
2024/day03/tests/: test.hs
2024/day04/: day04.cabal
2024/day04/lib/: Lib.hs
2024/day05/: day05.cabal  default.nix
2024/day05/app/: Main.hs
2024/day05/lib/: Lib.hs
2024/day05/tests/: test.hs
2024/day06/: day06.cabal  default.nix
2024/day06/lib/: Lib.hs
2024/day07/: day07.cabal  default.nix
2024/day07/lib/: Lib.hs
2024/day08/: day08.cabal
2024/day08/lib/: Lib.hs
2024/day09/: day09.cabal  default.nix
2024/day09/lib/: Compact.hs  Defragment.hs  Disk.hs  Lib.hs  Segment.hs
2024/day10/: day10.cabal  default.nix
2024/day10/lib/: Lib.hs
2024/day11/: day11.cabal  default.nix
2024/day11/app/: Main.hs
2024/day11/lib/: Lib.hs
2025/: flake.nix
2025/day01/: day01.cabal  default.nix
2025/day01/lib/: Lib.hs
2025/day02/: day02.cabal  default.nix
2025/day02/lib/: Lib.hs
2025/day03/: day03.cabal  default.nix
2025/day03/lib/: Lib.hs
2025/day04/: day04.cabal  default.nix
2025/day04/lib/: Lib.hs
2025/day05/: day05.cabal  default.nix
2025/day05/lib/: Lib.hs
2025/day06/: day06.cabal  default.nix
2025/day06/app/: Main.hs
2025/day06/lib/: Lib.hs
2025/day07/: day07.cabal  default.nix
2025/day07/lib/: Lib.hs
2025/day08/: day08.cabal  default.nix
2025/day08/lib/: Lib.hs
