cabal-version:      3.14
name:               day01
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Erlend Huru
-- maintainer:         erlendpe@online.no
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable day01
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
                    , containers ^>= 0.7
                    , file-embed ^>= 0.0.16.0
                    , megaparsec ^>= 9.7.0
                    , mtl ^>= 2.3.1
                    , parser-combinators ^>= 1.3.0
                    , text ^>= 2.1.2
    hs-source-dirs:   app
    default-language: GHC2024
