cabal-version:      3.14
name:               day02
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Erlend Huru
build-type:         Simple

common warnings
    ghc-options: -Wall

executable day02
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
                    , file-embed ^>= 0.0.16.0
                    , megaparsec ^>= 9.7.0
                    , text ^>= 2.1.2
    hs-source-dirs:   app
    default-language: GHC2024
