cabal-version:      3.14
name:               day04
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Erlend Huru
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Lib
    build-depends:    base ^>=4.21.0.0
                    , containers ^>= 0.7
    hs-source-dirs:   lib
    default-language: GHC2024

executable day04
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
                    , day04
    hs-source-dirs:   app
    default-language: GHC2024
