cabal-version:      3.14
name:               day04
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Erlend Huru
build-type:         Simple

common shared
    ghc-options: -Wall
    default-language: GHC2024

library
    import:           shared
    exposed-modules:  Lib
    build-depends:    base ^>=4.21.0.0
                    , containers ^>= 0.7
    hs-source-dirs:   lib

executable day04
    import:           shared
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
                    , day04
    hs-source-dirs:   app
